trunk/Archive2/54/617ea9b15ff428/output
main.cpp: In constructor 'Aggr::Aggr()':
main.cpp:17:28: error: invalid initializer for array member 'A Aggr::arr [2]'
   Aggr() : arr({"a"}, {"b"}) {}
                            ^
